@@ -200,19 +200,21 @@ public final class FileWritingTest {
     assertThat(Files.exists(fooPath)).isTrue();
     var source = new String(Files.readAllBytes(fooPath));
 
-    assertThat(source).isEqualTo("package foo;\n"
-        + "\n"
-        + "import java.lang.String;\n"
-        + "import java.lang.System;\n"
-        + "import java.util.Date;\n"
-        + "\n"
-        + "class Test {\n"
-        + "\tDate madeFreshDate;\n"
-        + "\n"
-        + "\tpublic static void main(String[] args) {\n"
-        + "\t\tSystem.out.println(\"Hello World!\");\n"
-        + "\t}\n"
-        + "}\n");
+    assertThat(source).isEqualTo("""
+        package foo;
+
+        import java.lang.String;
+        import java.lang.System;
+        import java.util.Date;
+
+        class Test {
+        \tDate madeFreshDate;
+
+        \tpublic static void main(String[] args) {
+        \t\tSystem.out.println("Hello World!");
+        \t}
+        }
+        """);
   }
 
   /**
@@ -223,17 +225,18 @@ public final class FileWritingTest {
   public void fileIsUtf8() throws IOException {
     var javaFile =
         JavaFile.builder("foo", TypeSpec.classBuilder("Taco").build())
-            .addFileComment("Pi\u00f1ata\u00a1")
+            .addFileComment("Piñata¡")
             .build();
     javaFile.writeTo(fsRoot);
 
     var fooPath = fsRoot.resolve(fs.getPath("foo", "Taco.java"));
-    assertThat(new String(Files.readAllBytes(fooPath), UTF_8)).isEqualTo(
-        "// Pi\u00f1ata\u00a1\n"
-            + "package foo;\n"
-            + "\n"
-            + "class Taco {\n"
-            + "}\n");
+    assertThat(Files.readString(fooPath)).isEqualTo(
+        """
+            // Piñata¡
+            package foo;
+
+            class Taco {}
+            """);
   }
 
   @Test
